# festival_organizer

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  config.py  liccheck.ini  licenses.md  pyproject.toml  requirements.txt  scrap_etrange_festival_2022.py
.github/workflows/: python-app.yml
data/: data.csv  etrange_festival_2022.csv
data_gathering/: scrap_etrange_festival.py
gather_data/: scrap_etrange_festival_2022.py
milvus/: utils.py
milvus_db_utils/: create_index.py  search.py  utils.py
tests/: u_tests_scrap_etrange_festival.py
